Don't override OnFocus/OnBlur in PageActionIconView

1) This had an error (OnBlur was calling InkDrop's OnFocus, leading to
the linked bug)
2) The override is no longer necessary due to https://crrev.com/c/1050185

Bug: 845396
Change-Id: I822b522bd92da1ffd0a81c6574bd7cc0dc9bad75
Reviewed-on: https://chromium-review.googlesource.com/1076590
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562481}
Former-commit-id: ef5ac018848da8544374059733bf59d21d17fa27