chrome/browser/ui/views/page_action/page_action_icon_view.h
@@ -90,8 +90,6 @@ class PageActionIconView : public views::InkDropHostView {
   virtual void OnPressed(bool activated) {}
 
   // views::InkDropHostView:
-  void OnFocus() override;
-  void OnBlur() override;
   void GetAccessibleNodeData(ui::AXNodeData* node_data) override;
   bool GetTooltipText(const gfx::Point& p,
                       base::string16* tooltip) const override;
